# ua_2024

./: .gitignore  .nojekyll  README.md  _quarto.yml  custom-style.css  environment.yml  hello.html  hello.qmd  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: quarto-publish.yml
chapter_0/: anaconda.html  anaconda.ipynb  anaconda.qmd  index.html  index.qmd  infrastructure.html  infrastructure.qmd  installation.html  installation.qmd  setup.html  setup.qmd
chapter_1/: cloud.html  cloud.qmd  cloud_gis.html  cloud_gis.qmd  gis.html  gis.qmd  gis_tips.html  gis_tips.qmd  intro_to_tableau.html  intro_to_tableau.qmd  notebooks.html  notebooks.ipynb  open_source.html  open_source.qmd  pandas.html  pandas.ipynb  python.html  python.ipynb  qgis.html  qgis.qmd  qgis_mapping.html  qgis_mapping.qmd  qgis_mapping_techniques.html  qgis_mapping_techniques.qmd  sql.html  sql.qmd
chapter_1/data/: cycling_docks.gpkg  cycling_routes.gpkg  workflow_mad_population.sql
chapter_1_jupyter/: notebooks_and_python.html  notebooks_and_python.ipynb
chapter_2/: cloud.html  gis.html  gis.qmd  intro_to_geopandas.html  intro_to_geopandas.qmd  intro_to_python.html  intro_to_python.qmd  intro_to_tableau.html  intro_to_tableau.qmd  open_source.html  open_source.qmd  pandas.html  pandas.ipynb  python.html  qgis.html  qgis.qmd  sql.html  sql.qmd
chapter_2/data/: 61438.xlsx  census_geoms_bizkaia.gpkg  xls0011435_c.xlsx
chapter_2_pandas/: hands_on.ipynb
site_libs/bootstrap/: bootstrap.min.css
