[project]
name = "ua_2024"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = ""},
]
dependencies = [
    "ipykernel>=6.28.0",
    "geopandas>=0.14.2",
    "osmnx>=1.8.1",
    "pandas>=2.1.4",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.1",
    "jupyterlab>=4.0.10",
    "quarto>=0.1.0",
    "matplotlib>=3.8.2",
    "jupyter>=1.0.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "CC-BY-SA"}


[tool.pdm]
package-type = "application"
